--- a/wercker.yml
+++ b/wercker.yml
@@ -45,6 +45,8 @@ deploy:
     - script:
         name: Install AppEngine SDK and deploy
         code: |-
+          sudo apt-get install unzip
+
           cd $WERCKER_ROOT
           curl -O http://googleappengine.googlecode.com/files/go_appengine_sdk_darwin_amd64-1.8.3.zip ; unzip -x go_appengine_sdk_darwin_amd64-1.8.3
           export PATH="$PATH:$(pwd)/go_appengine"
