--- a/wercker.yml
+++ b/wercker.yml
@@ -45,6 +45,7 @@ deploy:
     - script:
         name: Install AppEngine SDK and deploy
         code: |-
+          sudo apt-get update
           sudo apt-get install unzip
 
           cd $WERCKER_ROOT
