--- a/wercker.yml
+++ b/wercker.yml
@@ -41,16 +41,6 @@ build:
 deploy:
   steps:
     - pjvds/setup-go-workspace
-
-    - script:
-        name: Install AppEngine SDK and deploy
-        code: |-
-          sudo apt-get update
-          sudo apt-get install unzip
-
-          cd $WERCKER_ROOT
-          curl -O http://googleappengine.googlecode.com/files/go_appengine_sdk_darwin_amd64-1.8.3.zip ; unzip -x go_appengine_sdk_darwin_amd64-1.8.3
-          export PATH="$PATH:$(pwd)/go_appengine"
-          echo "$APP_ENGINE_PASS" > "$WERCKER_STEP_TEMP/password"
-          cd $WERCKER_SOURCE_DIR
-          appcfg.py update ./ --email=pj@born2code.net --passin < "$WERCKER_STEP_TEMP/password"
+    - pjvds/appengine-deploy
+        email: pj@born2code.net
+        password: $APP_ENGINE_PASS
