--- a/wercker.yml
+++ b/wercker.yml
@@ -40,6 +40,7 @@ build:
 
 deploy:
   steps:
+    - pjvds/setup-go-workspace
     - pjvds/appengine-deploy:
         email: pj@born2code.net
         password: $APP_ENGINE_PASS
