--- a/wercker.yml
+++ b/wercker.yml
@@ -11,13 +11,7 @@ build:
     #         # OR YOUR PROJECT, LIKE: $GOPATH/github.com/pjvds/httpcallback.io
     #         if test -d "$WERCKER_CACHE_DIR/go-pkg-cache"; then rsync -avzv --exclude "$WERCKER_SOURCE_DIR" "$WERCKER_CACHE_DIR/go-pkg-cache/" "$GOPATH/" ; fi
 
-    - script:
-        name: Write to artifact dir
-        code: |-
-           echo "foobar" > $WERCKER_REPORT_ARTIFACTS_DIR/log.txt
-           echo "baz" > $WERCKER_REPORT_ARTIFACTS_DIR/log2.txt
-           
-           
+    - danarnold/pry-todo-check
 
     - script:
         name: Get dependencies
